cmake_minimum_required(VERSION 3.16)

add_subdirectory(framework)

if(CONFIG_DRIVERS_CORE OR CONFIG_DRIVER_DUMMY OR CONFIG_DRIVER_OS OR CONFIG_DRIVER_SOCKET OR
   CONFIG_DRIVER_FILESYSTEM OR CONFIG_DRIVER_PIPE OR CONFIG_DRIVER_DYNLIB OR
   CONFIG_DRIVER_DATALINK OR CONFIG_DRIVER_AUDIO OR CONFIG_DRIVER_CONTROL OR
   CONFIG_DRIVER_LOG OR CONFIG_DRIVER_DUMP)
  add_subdirectory("${PROJECT_SOURCE_DIR}/drivers" "${CMAKE_BINARY_DIR}/drivers")
endif()

add_subdirectory(platform)

if(CONFIG_RPC)
  add_subdirectory("${PROJECT_SOURCE_DIR}/rpc" "${CMAKE_BINARY_DIR}/rpc")
endif()

set(AUDIO_STUDIO_SERVER_LIBS)
if(CONFIG_FRAMEWORK_COMMON)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_framework_common)
endif()
if(CONFIG_DRIVER_DUMMY)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_dummy_driver)
endif()
if(CONFIG_DRIVER_OS)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_driver_os)
endif()
if(CONFIG_DRIVER_SOCKET)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_driver_socket)
endif()
if(CONFIG_DRIVER_FILESYSTEM)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_driver_filesystem)
endif()
if(CONFIG_DRIVER_PIPE)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_driver_pipe)
endif()
if(CONFIG_DRIVER_DYNLIB)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_driver_dynlib)
endif()
if(CONFIG_DRIVER_DATALINK)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_driver_datalink)
endif()
if(CONFIG_DRIVER_AUDIO)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_driver_audio)
endif()
if(CONFIG_DRIVER_CONTROL)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_driver_control)
endif()
if(CONFIG_DRIVER_LOG)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_driver_log)
endif()
if(CONFIG_DRIVER_DUMP)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_driver_dump)
endif()
if(CONFIG_DRIVERS_CORE)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_drivers_core)
endif()
if(CONFIG_PLATFORM_CORE)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_platform_core)
endif()
if(CONFIG_PLATFORM_A2)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_platform_a2)
endif()
if(CONFIG_PLATFORM_SIMULATOR)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_platform_simulator)
endif()
if(CONFIG_FRAMEWORK_SESSION)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_framework_session)
endif()
if(CONFIG_FRAMEWORK_CONTROL)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_framework_control)
endif()
if(CONFIG_FRAMEWORK_AUDIO)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_framework_audio)
endif()
if(CONFIG_FRAMEWORK_CONFIG)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_framework_config)
endif()
if(CONFIG_FRAMEWORK_LOG)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_framework_log)
endif()
if(CONFIG_FRAMEWORK_DUMP)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_framework_dump)
endif()
if(CONFIG_FRAMEWORK_PLUGIN)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_framework_plugin)
endif()
if(CONFIG_FRAMEWORK_TRANSPORT)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_framework_transport)
endif()
if(CONFIG_RPC_CORE)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_rpc_core)
endif()
if(CONFIG_RPC_AUDIO_METHODS)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_rpc_audio)
endif()
if(CONFIG_RPC_SERVER)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_rpc_server)
endif()
if(CONFIG_RPC_CLIENT)
  list(APPEND AUDIO_STUDIO_SERVER_LIBS audio_studio_rpc_client)
endif()

add_executable(as_server as_server/main.cpp)
target_link_libraries(as_server PRIVATE audio_studio_config audio_studio_cli11 ${AUDIO_STUDIO_SERVER_LIBS})
target_compile_features(as_server PRIVATE cxx_std_17)
if(CONFIG_FRAMEWORK_CONFIG AND TARGET audio_studio_builtin_module_configs)
  add_dependencies(as_server audio_studio_builtin_module_configs)
endif()

if(CONFIG_BUILD_TESTS AND CONFIG_SERVER_FRAMEWORK_TESTS)
  add_executable(audio_studio_server_tests
    tests/server_tests.cpp
  )
  target_link_libraries(audio_studio_server_tests PRIVATE ${AUDIO_STUDIO_SERVER_LIBS})
  target_compile_definitions(audio_studio_server_tests PRIVATE
    AUDIO_STUDIO_TEST_ROOT="${PROJECT_SOURCE_DIR}"
  )
  if(CONFIG_FRAMEWORK_CONFIG)
    add_library(audio_studio_config_test_plugin SHARED
      tests/config_test_plugin.cpp
    )
    target_link_libraries(audio_studio_config_test_plugin PRIVATE AudioStudio::ModuleConfigSdk)
    target_compile_features(audio_studio_config_test_plugin PRIVATE cxx_std_17)
    target_compile_definitions(audio_studio_server_tests PRIVATE
      AUDIO_STUDIO_CONFIG_TEST_PLUGIN_PATH="$<TARGET_FILE:audio_studio_config_test_plugin>"
    )
    add_dependencies(audio_studio_server_tests audio_studio_config_test_plugin)
  endif()
  if(CONFIG_FRAMEWORK_CONFIG AND TARGET audio_studio_builtin_module_configs)
    add_dependencies(audio_studio_server_tests audio_studio_builtin_module_configs)
  endif()
  target_compile_features(audio_studio_server_tests PRIVATE cxx_std_17)
  add_test(NAME server_framework_tests COMMAND audio_studio_server_tests)
endif()

if(CONFIG_BUILD_TESTS AND CONFIG_DRIVER_INTERFACE_TESTS)
  add_library(audio_studio_driver_test_plugin SHARED
    tests/driver_test_plugin.cpp
  )
  target_compile_features(audio_studio_driver_test_plugin PRIVATE cxx_std_17)

  add_executable(audio_studio_driver_interface_tests
    tests/driver_interface_tests.cpp
  )
  target_link_libraries(audio_studio_driver_interface_tests PRIVATE ${AUDIO_STUDIO_SERVER_LIBS})
  target_compile_definitions(audio_studio_driver_interface_tests PRIVATE
    AUDIO_STUDIO_TEST_PLUGIN_PATH=\"$<TARGET_FILE:audio_studio_driver_test_plugin>\"
  )
  add_dependencies(audio_studio_driver_interface_tests audio_studio_driver_test_plugin)
  target_compile_features(audio_studio_driver_interface_tests PRIVATE cxx_std_17)
  add_test(NAME driver_interface_tests COMMAND audio_studio_driver_interface_tests)
endif()
