set(AUDIO_STUDIO_DRIVER_CONTROL_SOURCES)
if(CONFIG_DRIVER_CONTROL_LINUX_HOST)
  list(APPEND AUDIO_STUDIO_DRIVER_CONTROL_SOURCES src/linux_host_control_device.cpp)
endif()
audio_studio_require_sources(audio_studio_driver_control "${AUDIO_STUDIO_DRIVER_CONTROL_SOURCES}")

add_library(audio_studio_driver_control OBJECT
  ${AUDIO_STUDIO_DRIVER_CONTROL_SOURCES}
)
target_include_directories(audio_studio_driver_control PUBLIC include)
target_link_libraries(audio_studio_driver_control PUBLIC audio_studio_framework_common)
target_compile_features(audio_studio_driver_control PUBLIC cxx_std_17)
