add_library(audio_studio_framework_plugin
  src/plugin_manager.cpp
)
target_include_directories(audio_studio_framework_plugin PUBLIC include)
target_link_libraries(audio_studio_framework_plugin PUBLIC audio_studio_framework_common)
target_compile_features(audio_studio_framework_plugin PUBLIC cxx_std_17)
