add_library(audio_studio_framework_session
  src/session_registry.cpp
)
target_include_directories(audio_studio_framework_session PUBLIC include)
target_link_libraries(audio_studio_framework_session PUBLIC audio_studio_framework_common)
target_compile_features(audio_studio_framework_session PUBLIC cxx_std_17)
